# dml

./: .gitignore  CMakeLists.txt  COPYRIGHT  Makefile  README  README.md  build.sh  tags
cls/: Makefile  k2d.c  k2d.h  kmeans.c  kmeans.h  louvain.c  louvain.h
data/: doc_author  doc_words  in  lr  lr_b  pmf_test  pmf_train  pr  ts
dm/: CMakeLists.txt  Makefile  auc.c  auc.h  author_lda.c  author_lda.h  bmf.c  bri_lda.c  bri_lda.h  er.c  gr.c  joint_lda.c  joint_lda.h  kmeans.c  kmeans.h  lda.c  lda.h  lr.c  lr.h  mf.c  mf.h  modl.c  modl.h  newton_opt.c  newton_opt.h  pmf.c  pr.c  regression.c  regression.h  tot.c  tot.h
doc/: breakout_readme  pattern_detection
gbdt/: Makefile  design.txt  dtree.c  dtree.c.old  dtree.h  fn_types.h  gbcfg.h  gbdt.c  gbdt.h  gblr.c  gblr.h  gbm.c  gbm.h  gbmr.c  gboosting.c  gboosting.h  gbrank.c  gbrank.h  info.txt  tdata.c  tdata.h
gbdt.b/: Makefile  dtree.c  gbcfg.h  gbdt.c  gbm.h  gbmr.c  gbmr.h  gbrank.c  tdata.c  tdata.h
main/: Makefile  d2v.c  gblr.c  gbm.c  gbrank.c  kmeans.c  louvain.c  lr.c  tm.c  w2v.c  wpred.c
nn/: Makefile  d2v.c  d2v.h  d2v_config.c  hsoft.c  hsoft.h  rnn_config.c  rnn_config.h  rnnlm.c  rnnlm.h  tsdata.h  w2v.c  w2v.h  w2v_config.c  w2v_config.h
regr/: Makefile  deeplr.c  deeplr.h  lr.c  lr.h  newton.c  newton.h  regcfg.c  regcfg.h  regr.c  regr.h  regress.c  regress.h
regr.newton/: Makefile  auc.c  auc.h  lr.c  regr_fn.h
repo/: Makefile  repo.c  repo.h
script/: dtree.py
src/: CMakeLists.txt  Makefile  auc.c  author_lda.c  bayesian_changepoint.c  breakout.c  bri_lda.c  bseqr.c  er.c  fit_newton.c  gblr.c  gr.c  joint_lda.c  k2d.c  lda.c  loess.c  lr.c  mf.c  pattern_detection.c  pr.c  tm.c  tot.c  unique.c  viterbi.c  w2v.c
tm/: Makefile  hlda.c  htm.c  lda.c  lda.h  lda_xy.c  tm.c  tm.h  tm_config.c  tm_config.h  tm_config_h.c  tm_config_h.h  tm_config_x.c  tm_config_x.h  xtm.c
ts/: CMakeLists.txt  Makefile  bayesian_changepoint.c  bayesian_changepoint.h  breakout.c  breakout.h  dist.c  dist.h  dp.c  dp.h  edm.c  edm.h  fit_newton.c  fit_newton.h  hash_pattern.c  hash_pattern.h  loess.c  loess.h  modl.c  modl.h  pattern.c  pattern.h  viterbi.c  viterbi.h
util/: CMakeLists.txt  Makefile  data.c  data.h  fn_type.h  fptree.c  fptree.h  hash.c  hash.h  hashtable.c  hashtable.h  heap.c  heap.h  idmap.c  idmap.h  md5.c  md5.h  median.c  median.h  mtrace.c  mtrace.h  queue.c  queue.h  rand.h  rbtree.c  rbtree.h  set.c  set.h  str.c  str.h
w2v/: Makefile  d2v.c  d2v.h  d2v_config.c  d2v_config.h  doc2vec.c  doc2vec.h  hsoft.c  hsoft.h  rnn_config.c  rnn_config.h  rnnlm.c  tsdata.c  tsdata.h  vec.c  vec.h  w2v.c  w2v.h  w2v_config.c  w2v_config.h  word2vec.c  word2vec.h
